<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.account.AccountFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/account_title"
        android:textColor="#000"
        android:textSize="40sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="12dp"
        android:text="@string/account_name"
        android:textColor="#000"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/accountNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="12dp"
        android:text="@string/account_phone"
        android:textColor="#000"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/accountPhoneInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:ems="10"
        android:inputType="textPhonetic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="12dp"
        android:text="@string/account_address_default"
        android:textColor="#000"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/accountAddressDefaultInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:focusableInTouchMode="false"
        />

    <ProgressBar
        android:id="@+id/loadingBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center|bottom"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/accountSaveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Uložit"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="10dp"
            />
    </LinearLayout>


</LinearLayout>
