<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fontFamily="@font/roboto"
    android:gravity="top"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:yearListSelectorColor="@color/colorPrimary"
    tools:context=".activities.events.NewEventTypeActivity"
    tools:showIn="@layout/activity_new_event_type">

    <TextView
        android:id="@+id/newEventText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:textSize="32sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/type_event"
        android:textSize="20sp"
        android:textColor="@android:color/black"/>


    <Button
        android:id="@+id/pubButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/selected_image_button"
        android:backgroundTintMode="add"
        android:background="@drawable/pub_background"
        android:text="@string/event_type_text_one"
        android:textColor="@color/colorWhite"
        android:textSize="40dp"
        android:topLeftRadius="10dp"
        android:topRightRadius="10dp"
        android:visibility="visible"
        />

    <Button

        android:id="@+id/restaurantButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/restaurant_background"
        android:backgroundTint="@color/selected_image_button"
        android:backgroundTintMode="add"
        android:text="@string/event_type_text_two"
        android:textSize="40dp"
        android:textColor="@color/colorWhite"
        android:layout_gravity="center"
        android:bottomRightRadius="10dp"
        android:bottomLeftRadius="10dp"
        android:topLeftRadius="10dp"
        android:topRightRadius="10dp"

        />

    <Button
        android:id="@+id/teaHouseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@drawable/coffe_background"
        android:backgroundTint="@color/selected_image_button"
        android:backgroundTintMode="add"
        android:text="@string/event_type_text_three"
        android:textColor="@color/colorWhite"
        android:textSize="40dp"
        android:gravity="center"

        />

</androidx.appcompat.widget.LinearLayoutCompat>